--- a/NutriVaSe/NutriVaSe.csproj
+++ b/NutriVaSe/NutriVaSe.csproj
@@ -164,8 +164,11 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AntropometricosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MenusController.cs" />
+    <Compile Include="Controllers\PacientesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -177,10 +180,25 @@
     <Compile Include="Migrations\201609150214239_updateUsuario.Designer.cs">
       <DependentUpon>201609150214239_updateUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609210040243_Menu.cs" />
+    <Compile Include="Migrations\201609210040243_Menu.Designer.cs">
+      <DependentUpon>201609210040243_Menu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609210145258_Paciente.cs" />
+    <Compile Include="Migrations\201609210145258_Paciente.Designer.cs">
+      <DependentUpon>201609210145258_Paciente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609210232550_Antropometrico.cs" />
+    <Compile Include="Migrations\201609210232550_Antropometrico.Designer.cs">
+      <DependentUpon>201609210232550_Antropometrico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Antropometrico.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Menu.cs" />
+    <Compile Include="Models\Paciente.cs" />
     <Compile Include="Models\UserRolesDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -260,6 +278,23 @@
     <Content Include="Views\Admin\NuevoRol.cshtml" />
     <Content Include="Views\Admin\Roles.cshtml" />
     <Content Include="Views\Shared\_LoginLayout.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
+    <Content Include="Views\Menus\Create.cshtml" />
+    <Content Include="Views\Menus\Delete.cshtml" />
+    <Content Include="Views\Menus\Details.cshtml" />
+    <Content Include="Views\Menus\Edit.cshtml" />
+    <Content Include="Views\Menus\Index.cshtml" />
+    <Content Include="Views\Menus\MenuLista.cshtml" />
+    <Content Include="Views\Pacientes\Create.cshtml" />
+    <Content Include="Views\Pacientes\Delete.cshtml" />
+    <Content Include="Views\Pacientes\Details.cshtml" />
+    <Content Include="Views\Pacientes\Edit.cshtml" />
+    <Content Include="Views\Pacientes\Index.cshtml" />
+    <Content Include="Views\Antropometricos\Create.cshtml" />
+    <Content Include="Views\Antropometricos\Delete.cshtml" />
+    <Content Include="Views\Antropometricos\Details.cshtml" />
+    <Content Include="Views\Antropometricos\Edit.cshtml" />
+    <Content Include="Views\Antropometricos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -277,6 +312,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609150214239_updateUsuario.resx">
       <DependentUpon>201609150214239_updateUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609210040243_Menu.resx">
+      <DependentUpon>201609210040243_Menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609210145258_Paciente.resx">
+      <DependentUpon>201609210145258_Paciente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609210232550_Antropometrico.resx">
+      <DependentUpon>201609210232550_Antropometrico.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
